vh units used to make `slides` 100% height of the viewport and just as quickly removed because they are buggy on iOS.

--- a/_sass/_misc-reset.scss
+++ b/_sass/_misc-reset.scss
@@ -70,6 +70,7 @@ em, i{
 
 html, body{
 	height: 100%;
+	/*height: 100vh;*/
 }
 
 
@@ -145,9 +146,13 @@ a{
 	
 }
 	
-img, iframe{
+img{
 	height: auto;
 	max-width: 100%;
+}
+
+iframe{
+	max-width: 100%;	
 }
 
 h1, h2, h3, h4, h5, h6, .h{
