--- a/css/style.css
+++ b/css/style.css
@@ -295,7 +295,8 @@ em, i {
   font-style: italic; }
 
 html, body {
-  height: 100%; }
+  height: 100%;
+  /*height: 100vh;*/ }
 
 body {
   background: #ffdd22;
@@ -351,8 +352,11 @@ a {
     -ms-transform: translateY(-0.025em);
     transform: translateY(-0.025em); } }
 
-img, iframe {
+img {
   height: auto;
+  max-width: 100%; }
+
+iframe {
   max-width: 100%; }
 
 p, ul, ol, dl {
@@ -602,6 +606,7 @@ a.icon:after {
  */
 .section {
   height: 100%;
+  /*height: 100vh;*/
   padding-top: 2em;
   width: 100%; }
   @media screen and (min-width: 1025px) {
@@ -646,6 +651,7 @@ Slides
 */
 [data-slides] {
   height: 100%;
+  /*height: 100vh;*/
   position: relative; }
 
 [data-slide] {
